[OS/2] Bug 396767: fix OS/2 build break in widget following bug 394691, p=wuno, r=me/chris@pearce